tests/ui/fail/missing_select.stderr
error: Expected `SELECT`, found `FROM`
 --> tests/ui/fail/missing_select.rs:5:9
  |
5 |         FROM users WHERE  // Missing SELECT clause
  |         ^^^^

error[E0433]: failed to resolve: use of undeclared type `UserFilter`
  --> tests/ui/fail/missing_select.rs:11:19
   |
11 |     let _filter = UserFilter::new(1);
   |                   ^^^^^^^^^^ use of undeclared type `UserFilter`
